# vscode-cmake

./: .gitignore  .vscodeignore  LICENSE.md  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: release.yml
examples/: CMakeLists.txt
examples/exes/: CMakeLists.txt  exe.c
examples/libs/: CMakeLists.txt  lib.c  lib.h  test.c
src/: cmake.ts  extension.ts  parseCMake.ts  parse_cmake.ts  projectProvider.ts  terminal.ts
test/: CMakeLists.txt  main.c
test/exes/: exe.c
test/libs/: CMakeLists.txt
